<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".coroutines.CoroutinesExampleActivity">

    <TextView
        android:id="@+id/tv_activity_coroutines_example_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coroutine_empty_result"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_activity_coroutines_example_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_coroutines_example_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_activity_coroutines_example_task_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_task_one"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_activity_coroutines_example_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_activity_coroutines_example_task_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_task_two"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_coroutines_example_task_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pb_activity_coroutines_example_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>