<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lesson_background"
    tools:context=".lessonsapp.LessonActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lesson_title"
        style="@style/Text.Title.Yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:text="@string/lesson_title_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lesson_languages_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/language"
        android:textColor="@color/yellow_buttercup"
        app:layout_constraintTop_toBottomOf="@id/tv_lesson_title"
        app:layout_constraintStart_toStartOf="@id/rv_lesson_languages" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lesson_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_lesson_languages_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lesson_languages_label"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_language"
        tools:itemCount="3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lesson_lessons_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:textColor="@color/yellow_buttercup"
        android:text="@string/lessons"
        app:layout_constraintStart_toStartOf="@id/rv_lesson_languages"
        app:layout_constraintTop_toBottomOf="@id/rv_lesson_languages"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lesson_lessons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tv_lesson_lessons_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lesson_lessons_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_lesson"
        tools:itemCount="30" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_lessons_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_large_margin"
        android:layout_marginEnd="@dimen/horizontal_large_margin"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"
        app:backgroundTint="@color/lesson_add_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>